--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # tidycmprsk
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/ddsjoberg/tidycmprsk/workflows/R-CMD-check/badge.svg)](https://github.com/ddsjoberg/tidycmprsk/actions)
+[![R-CMD-check](https://github.com/MSKCC-Epi-Bio/tidycmprsk/workflows/R-CMD-check/badge.svg)](https://github.com/MSKCC-Epi-Bio/tidycmprsk/actions)
 [![Codecov test coverage](https://codecov.io/gh/ddsjoberg/tidycmprsk/branch/main/graph/badge.svg)](https://codecov.io/gh/ddsjoberg/tidycmprsk?branch=main)
 <!-- badges: end -->
 
@@ -24,17 +24,11 @@ The goal of tidycmprsk is to ...
 
 ## Installation
 
-You can install the released version of tidycmprsk from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-# install.packages("tidycmprsk")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install the released version of tidycmprsk from GitHub
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("ddsjoberg/tidycmprsk")
+devtools::install_github("/MSKCC-Epi-Bio/tidycmprsk")
 ```
 ## Example
 
@@ -42,7 +36,6 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(tidycmprsk)
-## basic example code
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
