--- a/README.Rmd
+++ b/README.Rmd
@@ -37,5 +37,5 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(tidycmprsk)
 
-crr(crSurv(ttdeath, death_cr_num) ~ age, trial)
+crr(Surv(ttdeath, death_cr) ~ age, trial)
 ```
