Update readme.md (progressively)

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,9 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/MSKCC-Epi-Bio/tidycmprsk/branch/main/graph/badge.svg)](https://codecov.io/gh/ddsjoberg/tidycmprsk?branch=main)
 <!-- badges: end -->
 
-The goal of tidycmprsk is to ...
+  The goal of `tidycmprsk` is to provide a compatible wrap of the competing risks analysis R package `cmprsk`, such that the output objects can work with methods like `model.frame()`, `model.matrix()`, `tidy()`, and so on. This package can be incorporated with `gtsummary` to provide convenient summary of competing risks models. 
+
+Currently, the package supports Fine and Gray's subdistribution hazard model (function `crr`). The non-parametric cumulative incidence function (function `cuminc`) is under development.
 
 ## Installation
 
@@ -32,7 +34,7 @@ devtools::install_github("/MSKCC-Epi-Bio/tidycmprsk")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+Fit a Fine and Gray model for the example data `trial` with covariate `age`.
 
 ```{r example}
 library(tidycmprsk)
