--- a/README.Rmd
+++ b/README.Rmd
@@ -20,21 +20,22 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/MSKCC-Epi-Bio/tidycmprsk/branch/main/graph/badge.svg)](https://codecov.io/gh/MSKCC-Epi-Bio/tidycmprsk?branch=main)
 <!-- badges: end -->
 
-  The goal of `tidycmprsk` is to provide a compatible wrap of the competing risks analysis R package `cmprsk`, such that the output objects can work with methods like `model.frame()`, `model.matrix()`, `tidy()`, and so on. This package can be incorporated with `gtsummary` to provide convenient summary of competing risks models. 
+The `tidycmprsk` package provides an improved interface for working with the competing risk endpoints.
+The package wraps `cmprsk` package, and exports functions for univariate cumulative incidence estimates with `cuminc()` and competing risk regression with `crr()`.
 
-Currently, the package supports Fine and Gray's subdistribution hazard model (function `crr`). The non-parametric cumulative incidence function (function `cuminc`) is under development.
+The package also exports broom-style tidiers: `tidy()`, `augment()`, and `glance()`.
 
 ## Installation
 
-You can install the released version of tidycmprsk from GitHub
+You can install the dev version of `tidycmprsk` from GitHub
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("MSKCC-Epi-Bio/tidycmprsk")
 ```
-## Example
+## Competing Risk Regression
 
-Fit a Fine and Gray model for the example data `trial` with covariate `age`.
+Fit a Fine and Gray model for the example data `trial` with covariates `age` and `trt`.
 
 ```{r example}
 library(tidycmprsk)
@@ -46,21 +47,27 @@ crr_mod
 The `tidycmprsk` plays will with other packages, such as `gtsummary`.
 
 ```{r gtsummary, message = FALSE}
-library(gtsummary)
-
-tbl <- tbl_regression(crr_mod, exponentiate = TRUE)
+tbl <- 
+  crr_mod %>%
+  gtsummary::tbl_regression(exponentiate = TRUE)
 ```
 
 ```{r gtsummary_print, include = FALSE}
 # Had to manually save images in temp file, not sure if better way.
-gt::gtsave(as_gt(tbl), file = file.path(tempdir(), "temp.png"))
+gt::gtsave(gtsummary::as_gt(tbl), file = file.path(tempdir(), "temp.png"))
 ```
 
-```{r out.width = "60%", echo = FALSE}
+```{r out.width = "50%", echo = FALSE}
 # Have to do this workaround since the README needs markdown format for GitHub page but a different format for the website.
 if (identical(Sys.getenv("IN_PKGDOWN"), "true")) {
   tbl
 } else {
   knitr::include_graphics("man/figures/README-gtsummary_print-1.png")
 } 
+```
+
+## Cumulative Incidence
+
+```{r}
+cuminc(Surv(ttdeath, death_cr) ~ 1, trial)
 ```
